[package]
name = "decentralized-science-network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.50", features = ["tcp", "dns", "mdns", "kad"] }
tokio = { version = "1.0", features = ["full"] }
ark-bls12-381 = "0.3"
ark-groth16 = "0.3"
ark-snark = "0.3"
ark-relations = "0.3"
ark-std = "0.3"
ed25519-dalek = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
